src/reniec-microservice/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reniec-microservice
  labels:
    name: reniec-microservice
    environment: production
