src/reniec-microservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reniec-service
  namespace: reniec-microservice
  labels:
    app: reniec-microservice
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: reniec-microservice
